--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.0.0'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha7'
+    compile 'android.arch.persistence.room:runtime:1.0.0-alpha7'
     testCompile 'junit:junit:4.12'
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha7"
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha7"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha7"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha7"
+    annotationProcessor 'android.arch.lifecycle:compiler:1.0.0-alpha7'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0-alpha7'
 }
