Added Test activity, which get test result after 6 days of training and store it in db

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.Training" />
         </activity>
+        <activity android:name=".activities.Test">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.Training" />
+        </activity>
     </application>
 
 </manifest>
